# CppTemplate

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: CMakeLists.txt  benchmark_main.cpp
cmake/: MyProject.cmake.in  cache_options.cmake
doc/: Doxyfile
doc/source/: api.rst  conf.py  index.rst
examples/: CMakeLists.txt
examples/baseline/: CMakeLists.txt  main.cpp
myproject/: lib.h
tests/: CMakeLists.txt  test_main.cpp
